fix flares being 2px too small in each direction

--- a/compile.scss
+++ b/compile.scss
@@ -1,3 +1,6 @@
 ---
 ---
+$flairs: 'flairs.png';
+$ranks: 'ranks.png';
+$masteries: 'masteries.png';
 @import 'styles';
