--- a/styles.scss
+++ b/styles.scss
@@ -1,29 +1,30 @@
 .flair {
-  padding: 0px;
-  margin: 0;
-  line-height: 25px;
+  padding: 0 10px 0 0;
+  margin: 0 10px 0 0;
   vertical-align: middle;
   text-align: right;
   color: #FFF;
-  background: url(flairs.png) top left no-repeat #000;
-  padding-right: 10px;
+  background: url($flairs) top left no-repeat #000;
   position: relative;
   z-index: 10;
   opacity: 0.7;
-  min-width:50px;
   overflow: hidden;
-  margin-right: 3px;
-  text-indent: 60px;
   border: 1px solid #000;
   border-radius: 2px;
+  box-sizing: border-box;
+
+  height: 27px;
+  line-height: 27px;
+  
   -webkit-transition: all 0.3s;
   -moz-transition: all 0.3s;
   -ms-transition: all 0.3s;
   -o-transition: all 0.3s;
   transition: all 0.3s;
 
-  width: 50px;
-  height: 25px;
+  min-width: 52px;
+  width: 52px;
+  text-indent: 60px;
 }
 
 .flair:hover {
@@ -33,8 +34,8 @@
 
 // rank xor mastery
 .flair[class*="flair-rank-"], .flair[class*="flair-mastery-"] {
-  min-width: 75px;
-  width: 75px;
+  min-width: 77px;
+  width: 77px;
   text-indent: 85px;
 }
 
@@ -43,28 +44,28 @@
   display: block;
   
   position: absolute;
-  top: -1px;
-  left: 49px;
+  top: 0px;
+  left: 50px;
   width: 25px;
   height: 25px;
 }
 .flair[class*="flair-rank-"]::before {
   @extend %flair-pseudoelement;
-  background-image: url(ranks.png);
+  background-image: url($ranks);
 }
 .flair[class*="flair-mastery-"]::after {
   @extend %flair-pseudoelement;
-  background-image: url(masteries.png);
+  background-image: url($masteries);
 }
 
 // rank and mastery
 .flair[class*="flair-rank-"][class*="flair-mastery-"] {
-  min-width: 100px;
-  width: 100px;
+  min-width: 102px;
+  width: 102px;
   text-indent: 110px;
 }
 .flair[class*="flair-rank-"][class*="flair-mastery-"]::after {
-  left: 74px;
+  left: 75px;
 }
 
 //flairs
